--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <title>WorkBreak Dashboard</title>
     <link rel="stylesheet" href="dashboard.css">
     <style>
-    /* Basic styles - you should move these to dashboard.css for better organization */
+   
     body {
         font-family: Arial, sans-serif;
         margin: 0;
@@ -138,10 +138,10 @@
                 <ul class="submenu" id="dashboard-submenu">
                     <li><a href="?module=training">Training Management</a>
                     <ul class="submenu" id="training-submenu">
-                    <li><a href="?module=planning.php">Planning</a></li>
-                    <li><a href="?module=monitoring.php">Monitoring</a></li>
-                    <li><a href="?module=execution.php">Execution</a></li>
-                     <li><a href="?module=trainer_selection.php">Trainer Selection</a></li>
+                    <li><a href="?module=planning.html">Planning</a></li>
+                    <li><a href="?module=monitoring.html">Monitoring</a></li>
+                    <li><a href="?module=execution.html">Execution</a></li>
+                     <li><a href="?module=trainer_selection.html">Trainer Selection</a></li>
                 </ul>
                     </li>
                     <li><a href="?module=learning">Learning Management</a>
@@ -172,8 +172,8 @@
                     </li>
                 </ul>
             </li>
-<li><a href="?module=training.php">Admin Settings</a></li>
-<li><a href="?module=systemsettings.php">System Settings</a></li>
+<li><a href="?module=training.html">Admin Settings</a></li>
+<li><a href="?module=systemsettings.html">System Settings</a></li>
         </ul>
     </div>
     <div class="main-content">
