--- a/internal_trainers.html
+++ b/internal_trainers.html
@@ -64,35 +64,35 @@
   <h1>🌟 Meet Our Internal Trainers</h1>
   <div class="trainer-container">
     <div class="trainer-card">
-      <img src="sarah.jpg" alt="Sarah Chen">
+      <img src="sarah.png" alt="Sarah Chen">
       <div class="trainer-name">Sarah Chen</div>
       <div class="trainer-background">10+ years in HR, CPTD, specializes in employee onboarding and compliance training.</div>
       <div class="stars">★★★★★</div>
     </div>
 
     <div class="trainer-card">
-      <img src="david.jpg" alt="David Rodriguez">
+      <img src="david.png" alt="David Rodriguez">
       <div class="trainer-name">David Rodriguez</div>
       <div class="trainer-background">8 years in HR, SHRM-SCP, focuses on leadership development and performance management training.</div>
       <div class="stars">★★★★★</div>
     </div>
 
     <div class="trainer-card">
-      <img src="jessica.jpg" alt="Jessica Miller">
+      <img src="jessica.png" alt="Jessica Miller">
       <div class="trainer-name">Jessica Miller</div>
       <div class="trainer-background">23 years in HR, Master's in Organizational Psychology, expertise in DE&I training and conflict resolution.</div>
       <div class="stars">★★★★★</div>
     </div>
 
     <div class="trainer-card">
-      <img src="michael.jpg" alt="Michael Brown">
+      <img src="michael.png" alt="Michael Brown">
       <div class="trainer-name">Michael Brown</div>
       <div class="trainer-background">12 years in HR, CPLP, specializes in technical training for HRIS and talent acquisition.</div>
       <div class="stars">★★★★★</div>
     </div>
 
     <div class="trainer-card">
-      <img src="emily.jpg" alt="Emily Wilson">
+      <img src="emily.png" alt="Emily Wilson">
       <div class="trainer-name">Emily Wilson</div>
       <div class="trainer-background">7 years in HR, strong background in communication and change management.</div>
       <div class="stars">★★★★★</div>
