--- a/login1.html
+++ b/login1.html
@@ -1,7 +1,7 @@
 <?php
 // login.html
 session_start();
-include('Connections.php');
+include('Connections.html');
 
 if ($_SERVER['REQUEST_METHOD'] == 'POST') {
   $email = $_POST['email'];
