--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <?php
-// register.php
+// register.html
 session_start();
-include('Connections.php'); // Assuming this file handles your database connection
+include('Connections.html'); // Assuming this file handles your database connection
 
 if ($_SERVER['REQUEST_METHOD'] == 'POST') {
     if (isset($_POST['register'])) { // Check if it's the registration form
