--- a/login1.html
+++ b/login1.html
@@ -1,44 +1,47 @@
-<?php
-// login.html
-session_start();
-include('Connections.html');
-
-if ($_SERVER['REQUEST_METHOD'] == 'POST') {
-  $email = $_POST['email'];
-  $password = $_POST['password'];
-
-  $stmt = $conn->prepare("SELECT id, username FROM users WHERE email = ? AND password = ?");
-  $stmt->bind_param("ss", $email, $password);
-  $stmt->execute();
-  $stmt->store_result();
-
-  if ($stmt->num_rows > 0) {
-    $stmt->bind_result($id, $username);
-    $stmt->fetch();
-    $_SESSION['user'] = $id;
-    echo "<script>sessionStorage.setItem('username', '$username'); window.location.href = 'index.php';</script>";
-  } else {
-    echo "Invalid email or password.";
-  }
-}
-?>
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Login - WorkBreak</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Login - WorkBreak</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1 style="text-align:center; font-family: Georgia;">WELCOME TO WORKBREAK STRUCTURE</h1>
-    <form method="POST" style="text-align:center;">
-      <label>Email:</label><br>
-      <input type="email" name="email" required><br>
-      <label>Password:</label><br>
-      <input type="password" name="password" required><br>
-      <button type="submit">Login</button>
-    </form>
-  </div>
+    <div class="container">
+        <h1 style="text-align:center; font-family: Georgia;">WELCOME TO WORKBREAK STRUCTURE</h1>
+        <form method="POST" style="text-align:center;">
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password" required><br><br>
+            <button type="submit">Login</button>
+        </form>
+    </div>
+
+    <script>
+        // This is where JavaScript would handle the login logic
+        // since HTML itself cannot process form submissions for authentication.
+
+        // Example of how you might handle the form submission with JavaScript:
+        document.querySelector('form').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            const email = document.querySelector('input[name="email"]').value;
+            const password = document.querySelector('input[name="password"]').value;
+
+            // In a real application, you would send this data to a server-side script
+            // (like the PHP you had before) using AJAX (fetch or XMLHttpRequest)
+            // to authenticate the user.
+
+            console.log("Email:", email);
+            console.log("Password:", password);
+
+            // For this HTML-only version, we can only simulate a login:
+            if (email === 'test@example.com' && password === 'password123') {
+                sessionStorage.setItem('username', 'Test User'); // Simulate setting a username
+                window.location.href = 'index.html'; // Redirect to a hypothetical index.html
+            } else {
+                alert('Invalid email or password (simulated).');
+            }
+        });
+    </script>
 </body>
 </html>
