--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <title>Register - WorkBreakdown structure</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>A
     <div class="container">
         <h1 style="text-align:center; font-family: Georgia;">REGISTER FOR WORKBREAKDOWN STRUCTURE</h1>
         <form method="POST" style="text-align:center;" onsubmit="event.preventDefault(); return simulateRegister(this);">
@@ -32,13 +32,13 @@
                 alert("All fields are required (simulated).");
                 return false;
             } else {
-                alert("Registration successful! (Simulated). Redirecting to user information page.");
+                alert("Registration successful! (Simulated). Redirecting to login page.");
 
-                // Store registered email and password in localStorage
+                // Store registered email and password in localStorage (optional for direct login)
                 localStorage.setItem('registeredEmail', email);
                 localStorage.setItem('registeredPassword', password);
 
-                window.location.href = 'user.html';
+                window.location.href = 'login1.html?registered=true'; // Redirect to login page with a flag
                 return true;
             }
 
