--- a/login1.html
+++ b/login1.html
@@ -48,72 +48,70 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.get('registered') === 'true') {
-                const registeredEmail = sessionStorage.getItem('registeredEmail');
-                const registeredPassword = sessionStorage.getItem('registeredPassword');
+       document.addEventListener('DOMContentLoaded', function() {
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.get('registered') === 'true') {
+        const registeredEmail = localStorage.getItem('registeredEmail'); // Use localStorage
+        const registeredPassword = localStorage.getItem('registeredPassword'); // Use localStorage
 
-                if (registeredEmail && registeredPassword) {
-                    document.querySelector('input[name="email"]').value = registeredEmail;
-                    document.querySelector('input[name="password"]').value = registeredPassword;
-                }
+        console.log("Retrieved from localStorage - Email:", registeredEmail);
+        console.log("Retrieved from localStorage - Password:", registeredPassword);
 
-                sessionStorage.removeItem('registeredEmail');
-                sessionStorage.removeItem('registeredPassword');
-            }
-
-            const loginForm = document.querySelector('#loginForm');
-            const verificationContainer = document.querySelector('#verificationContainer');
-
-            loginForm.addEventListener('submit', function(event) {
-    event.preventDefault();
-    const email = document.querySelector('input[name="email"]').value;
-    const password = document.querySelector('input[name="password"]').value;
-    const isHuman = document.querySelector('#captcha').checked;
-
-    console.log("Entered Email:", email);
-    console.log("Entered Password:", password);
-    console.log("Human Check:", isHuman);
-
-    const storedEmail = sessionStorage.getItem('registeredEmail');
-    const storedPassword = sessionStorage.getItem('registeredPassword');
-
-    console.log("Stored Email:", storedEmail);
-    console.log("Stored Password:", storedPassword);
-
-    if (isHuman) {
-        console.log("Comparing Entered Email:", email, "with Stored Email:", storedEmail);
-        console.log("Comparing Entered Password:", password, "with Stored Password:", storedPassword);
-        if (email === storedEmail && password === storedPassword && storedEmail !== null) {
-            console.log("Simulating sending verification code to:", email);
-            loginForm.style.display = 'none';
-            verificationContainer.style.display = 'block';
-        } else if (email === 'test@example.com' && password === 'password123') {
-            console.log("Simulating sending verification code to:", email);
-            loginForm.style.display = 'none';
-            verificationContainer.style.display = 'block';
-        } else {
-            alert('Invalid email or password (simulated).');
+        if (registeredEmail && registeredPassword) {
+            document.querySelector('input[name="email"]').value = registeredEmail;
+            document.querySelector('input[name="password"]').value = registeredPassword;
         }
-    } else {
-        alert('Please confirm you are not a robot.');
+
+        localStorage.removeItem('registeredEmail'); // Use localStorage
+        localStorage.removeItem('registeredPassword'); // Use localStorage
     }
+
+    const loginForm = document.querySelector('#loginForm');
+    const verificationContainer = document.querySelector('#verificationContainer');
+
+    loginForm.addEventListener('submit', function(event) {
+        event.preventDefault();
+        const email = document.querySelector('input[name="email"]').value;
+        const password = document.querySelector('input[name="password"]').value;
+        const isHuman = document.querySelector('#captcha').checked;
+
+        console.log("Entered Email:", email);
+        console.log("Entered Password:", password);
+        console.log("Human Check:", isHuman);
+
+        const storedEmail = localStorage.getItem('registeredEmail'); // Use localStorage
+        const storedPassword = localStorage.getItem('registeredPassword'); // Use localStorage
+
+        console.log("Stored Email (before compare):", storedEmail);
+        console.log("Stored Password (before compare):", storedPassword);
+
+        if (isHuman) {
+            if (email === storedEmail && password === storedPassword && storedEmail !== null) {
+                console.log("Login successful based on registered data (simulated).");
+                loginForm.style.display = 'none';
+                verificationContainer.style.display = 'block';
+            } else if (email === 'test@example.com' && password === 'password123') {
+                console.log("Login successful based on hardcoded data.");
+                loginForm.style.display = 'none';
+                verificationContainer.style.display = 'block';
+            } else {
+                alert('Invalid email or password (simulated).');
+            }
+        } else {
+            alert('Please confirm you are not a robot.');
+        }
+    });
+
+    const verifyButton = document.querySelector('#verifyButton');
+    verifyButton.addEventListener('click', function() {
+        const verificationCode = document.querySelector('input[name="verificationCode"]').value;
+
+        if (verificationCode === '123456') {
+            sessionStorage.setItem('username', 'Verified User'); // Still using sessionStorage for the session
+            window.location.href = 'index.html';
+        } else {
+            alert('Invalid verification code.');
+        }
+    });
 });
-
-            const verifyButton = document.querySelector('#verifyButton');
-            verifyButton.addEventListener('click', function() {
-                const verificationCode = document.querySelector('input[name="verificationCode"]').value;
-
-                // Simulate verification code check
-                if (verificationCode === '123456') {
-                    sessionStorage.setItem('username', 'Verified User');
-                    window.location.href = 'index.html';
-                } else {
-                    alert('Invalid verification code.');
-                }
-            });
-        });
-    </script>
-</body>
 </html>
