--- a/login1.html
+++ b/login1.html
@@ -13,12 +13,6 @@
             display: block;
             margin-bottom: 5px;
         }
-
-        .verification-container {
-            display: none;
-            margin-top: 20px;
-            text-align: center;
-        }
     </style>
 </head>
 <body>
@@ -37,81 +31,60 @@
             <br>
             <button type="submit">Login</button>
         </form>
-
-        <div id="verificationContainer" class="verification-container">
-            <h2>Verify Your Email</h2>
-            <p>A verification code has been sent to your email address (simulated).</p>
-            <label for="verificationCode">Verification Code:</label><br>
-            <input type="text" id="verificationCode" name="verificationCode" required><br><br>
-            <button id="verifyButton" type="button">Verify Code</button>
-        </div>
     </div>
 
     <script>
-       document.addEventListener('DOMContentLoaded', function() {
-    const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.get('registered') === 'true') {
-        const registeredEmail = localStorage.getItem('registeredEmail'); // Use localStorage
-        const registeredPassword = localStorage.getItem('registeredPassword'); // Use localStorage
+        document.addEventListener('DOMContentLoaded', function() {
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.get('registered') === 'true') {
+                const registeredEmail = localStorage.getItem('registeredEmail'); // Use localStorage
+                const registeredPassword = localStorage.getItem('registeredPassword'); // Use localStorage
 
-        console.log("Retrieved from localStorage - Email:", registeredEmail);
-        console.log("Retrieved from localStorage - Password:", registeredPassword);
+                console.log("Retrieved from localStorage - Email:", registeredEmail);
+                console.log("Retrieved from localStorage - Password:", registeredPassword);
 
-        if (registeredEmail && registeredPassword) {
-            document.querySelector('input[name="email"]').value = registeredEmail;
-            document.querySelector('input[name="password"]').value = registeredPassword;
-        }
+                if (registeredEmail && registeredPassword) {
+                    document.querySelector('input[name="email"]').value = registeredEmail;
+                    document.querySelector('input[name="password"]').value = registeredPassword;
+                }
 
-        localStorage.removeItem('registeredEmail'); // Use localStorage
-        localStorage.removeItem('registeredPassword'); // Use localStorage
-    }
-
-    const loginForm = document.querySelector('#loginForm');
-    const verificationContainer = document.querySelector('#verificationContainer');
-
-    loginForm.addEventListener('submit', function(event) {
-        event.preventDefault();
-        const email = document.querySelector('input[name="email"]').value;
-        const password = document.querySelector('input[name="password"]').value;
-        const isHuman = document.querySelector('#captcha').checked;
-
-        console.log("Entered Email:", email);
-        console.log("Entered Password:", password);
-        console.log("Human Check:", isHuman);
-
-        const storedEmail = localStorage.getItem('registeredEmail'); // Use localStorage
-        const storedPassword = localStorage.getItem('registeredPassword'); // Use localStorage
-
-        console.log("Stored Email (before compare):", storedEmail);
-        console.log("Stored Password (before compare):", storedPassword);
-
-        if (isHuman) {
-            if (email === storedEmail && password === storedPassword && storedEmail !== null) {
-                console.log("Login successful based on registered data (simulated).");
-                loginForm.style.display = 'none';
-                verificationContainer.style.display = 'block';
-            } else if (email === 'test@example.com' && password === 'password123') {
-                console.log("Login successful based on hardcoded data.");
-                loginForm.style.display = 'none';
-                verificationContainer.style.display = 'block';
-            } else {
-                alert('Invalid email or password (simulated).');
+                localStorage.removeItem('registeredEmail'); // Use localStorage
+                localStorage.removeItem('registeredPassword'); // Use localStorage
             }
-        } else {
-            alert('Please confirm you are not a robot.');
-        }
-    });
 
-    const verifyButton = document.querySelector('#verifyButton');
-    verifyButton.addEventListener('click', function() {
-        const verificationCode = document.querySelector('input[name="verificationCode"]').value;
+            const loginForm = document.querySelector('#loginForm');
 
-        if (verificationCode === '123456') {
-            sessionStorage.setItem('username', 'Verified User'); // Still using sessionStorage for the session
-            window.location.href = 'index.html';
-        } else {
-            alert('Invalid verification code.');
-        }
-    });
-});
+            loginForm.addEventListener('submit', function(event) {
+                event.preventDefault();
+                const email = document.querySelector('input[name="email"]').value;
+                const password = document.querySelector('input[name="password"]').value;
+                const isHuman = document.querySelector('#captcha').checked;
+
+                console.log("Entered Email:", email);
+                console.log("Entered Password:", password);
+                console.log("Human Check:", isHuman);
+
+                const storedEmail = localStorage.getItem('registeredEmail'); // Use localStorage
+                const storedPassword = localStorage.getItem('registeredPassword'); // Use localStorage
+
+                console.log("Stored Email (before compare):", storedEmail);
+                console.log("Stored Password (before compare):", storedPassword);
+
+                if (isHuman) {
+                    if (email === storedEmail && password === storedPassword && storedEmail !== null) {
+                        console.log("Login successful based on registered data (simulated). Redirecting to verification.html");
+                        window.location.href = 'verification.html';
+                    } else if (email === 'test@example.com' && password === 'password123') {
+                        console.log("Login successful based on hardcoded data. Redirecting to verification.html");
+                        window.location.href = 'verification.html';
+                    } else {
+                        alert('Invalid email or password (simulated).');
+                    }
+                } else {
+                    alert('Please confirm you are not a robot.');
+                }
+            });
+        });
+    </script>
+</body>
 </html>
