--- a/login1.html
+++ b/login1.html
@@ -34,57 +34,55 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const urlParams = new URLSearchParams(window.location.search);
-            if (urlParams.get('registered') === 'true') {
-                const registeredEmail = localStorage.getItem('registeredEmail'); // Use localStorage
-                const registeredPassword = localStorage.getItem('registeredPassword'); // Use localStorage
+      document.addEventListener('DOMContentLoaded', function() {
+    const urlParams = new URLSearchParams(window.location.search);
+    if (urlParams.get('registered') === 'true') {
+        const registeredEmail = localStorage.getItem('registeredEmail'); 
+        const registeredPassword = localStorage.getItem('registeredPassword'); 
 
-                console.log("Retrieved from localStorage - Email:", registeredEmail);
-                console.log("Retrieved from localStorage - Password:", registeredPassword);
+        console.log("Retrieved from localStorage - Email:", registeredEmail);
+        console.log("Retrieved from localStorage - Password:", registeredPassword);
 
-                if (registeredEmail && registeredPassword) {
-                    document.querySelector('input[name="email"]').value = registeredEmail;
-                    document.querySelector('input[name="password"]').value = registeredPassword;
-                }
+        if (registeredEmail && registeredPassword) {
+            document.querySelector('input[name="email"]').value = registeredEmail;
+            document.querySelector('input[name="password"]').value = registeredPassword;
+        }
 
-                localStorage.removeItem('registeredEmail'); // Use localStorage
-                localStorage.removeItem('registeredPassword'); // Use localStorage
+        
+        // localStorage.removeItem('registeredEmail');
+        // localStorage.removeItem('registeredPassword');
+    }
+
+    const loginForm = document.querySelector('#loginForm');
+
+    loginForm.addEventListener('submit', function(event) {
+        event.preventDefault();
+        const email = document.querySelector('input[name="email"]').value;
+        const password = document.querySelector('input[name="password"]').value;
+        const isHuman = document.querySelector('#captcha').checked;
+
+        console.log("Entered Email:", email);
+        console.log("Entered Password:", password);
+        console.log("Human Check:", isHuman);
+
+        const storedEmail = localStorage.getItem('registeredEmail'); // Use localStorage
+        const storedPassword = localStorage.getItem('registeredPassword'); // Use localStorage
+
+        console.log("Stored Email (before compare):", storedEmail);
+        console.log("Stored Password (before compare):", storedPassword);
+
+        if (isHuman) {
+            if (email === storedEmail && password === storedPassword && storedEmail !== null) {
+                console.log("Login successful based on registered data (simulated). Redirecting to verification.html");
+                window.location.href = 'verification.html';
+            } else if (email === 'test@example.com' && password === 'password123') {
+                console.log("Login successful based on hardcoded data. Redirecting to verification.html");
+                window.location.href = 'verification.html';
+            } else {
+                alert('Invalid email or password (simulated).');
             }
-
-            const loginForm = document.querySelector('#loginForm');
-
-            loginForm.addEventListener('submit', function(event) {
-                event.preventDefault();
-                const email = document.querySelector('input[name="email"]').value;
-                const password = document.querySelector('input[name="password"]').value;
-                const isHuman = document.querySelector('#captcha').checked;
-
-                console.log("Entered Email:", email);
-                console.log("Entered Password:", password);
-                console.log("Human Check:", isHuman);
-
-                const storedEmail = localStorage.getItem('registeredEmail'); // Use localStorage
-                const storedPassword = localStorage.getItem('registeredPassword'); // Use localStorage
-
-                console.log("Stored Email (before compare):", storedEmail);
-                console.log("Stored Password (before compare):", storedPassword);
-
-                if (isHuman) {
-                    if (email === storedEmail && password === storedPassword && storedEmail !== null) {
-                        console.log("Login successful based on registered data (simulated). Redirecting to verification.html");
-                        window.location.href = 'verification.html';
-                    } else if (email === 'test@example.com' && password === 'password123') {
-                        console.log("Login successful based on hardcoded data. Redirecting to verification.html");
-                        window.location.href = 'verification.html';
-                    } else {
-                        alert('Invalid email or password (simulated).');
-                    }
-                } else {
-                    alert('Please confirm you are not a robot.');
-                }
-            });
-        });
-    </script>
-</body>
-</html>
+        } else {
+            alert('Please confirm you are not a robot.');
+        }
+    });
+});
