--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <title>Register - WorkBreakdown structure</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>A
+<body>
     <div class="container">
         <h1 style="text-align:center; font-family: Georgia;">REGISTER FOR WORKBREAKDOWN STRUCTURE</h1>
         <form method="POST" style="text-align:center;" onsubmit="event.preventDefault(); return simulateRegister(this);">
