--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <a href="#">Dashboard</a>
         <ul class="submenu" id="dashboard-submenu">
           <li>
-            <a href="?module=training">Training Management</a>
+            <a href="training.html">Training Management</a>
             <ul class="submenu" id="training-submenu">
               <li><a href="?module=planning">Planning</a></li>
               <li><a href="?module=monitoring">Monitoring</a></li>
