--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
     <ul class="sidebar-menu">
       <li style="padding: 12px 20px; font-weight: bold; color: #ccc;">Dashboard</li>
 
-      <li class="has-submenu">
-        <a href="#">Training Management</a>
-        <ul class="submenu">
-          <li><a href="?module=planning">Planning</a></li>
-          <li><a href="?module=monitoring">Monitoring</a></li>
-          <li><a href="?module=execution">Execution</a></li>
-          <li><a href="?module=trainer_selection">Trainer Selection</a></li>
-        </ul>
-      </li>
+   <li class="has-submenu">
+  <a href="#">Training Management</a>
+  <ul class="submenu">
+    <li><a href="planning.html">Planning</a></li> 
+    <li><a href="monitoring.html">Monitoring</a></li>
+    <li><a href="execution.html">Execution</a></li>
+    <li><a href="trainer_selection.html">Trainer Selection</a></li>
+  </ul>
+</li>
 
       <li class="has-submenu">
         <a href="#">Learning Management</a>
