--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </li>
 
       <li><a href="adminsettings.html">Admin Settings</a></li>
-      <li><a href="stemsettings.html">System Settings</a></li>
+      <li><a href="systemsettings.html">System Settings</a></li>
 
     </ul>
   </div>
