--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 
       <li><a href="adminsettings.html">Admin Settings</a></li>
       <li><a href="systemsettings.html">System Settings</a></li>
+      <li><a href="login.html">Log out</a></li>
 
     </ul>
   </div>
