--- a/index.html
+++ b/index.html
@@ -180,9 +180,11 @@
         </ul>
       </li>
 
-      <li><a href="adminsettings.html">Admin Settings</a></li>
-      <li><a href="systemsettings.html">System Settings</a></li>
-      <li><a href="login1.html">             Log out   </a></li>
+      <ul>
+  <li><a href="adminsettings.html">Admin Settings</a></li>
+  <li><a href="systemsettings.html">System Settings</a></li>
+  <li><a href="login1.html" style="color: white;">Log out</a></li> 
+</ul>
 
     </ul>
   </div>
