--- a/index.html
+++ b/index.html
@@ -180,10 +180,16 @@
         </ul>
       </li>
 
-      <ul>
+     <ul>
   <li><a href="adminsettings.html">Admin Settings</a></li>
   <li><a href="systemsettings.html">System Settings</a></li>
-  <li><a href="login1.html" style="color: white;">Log out</a></li> 
+  <li>
+    <a href="login1.html" 
+       style="color: white; background-color: red; padding: 5px 10px; border-radius: 5px;"
+       onclick="return confirmLogout();">
+       Log out
+    </a>
+  </li>
 </ul>
 
     </ul>
