--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
   <li><a href="systemsettings.html">System Settings</a></li>
   <li>
     
-    <a href="login1.html" 
-       style="color: white; background-color: red; padding: 5px 10px; border-radius: 5px;"
+     <li><a href="login1.html" 
+       style="color: white; background-color: black; padding: 5px 10px; border-radius: 5px;"
        onclick="return confirmLogout();">
        Log out
     </a>
