--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <ul class="submenu">
           <li><a href="project_management.html">Project Management</a></li>
           <li><a href="implementation.html">Implementation</a></li>
-          <li><a href="talent_implementation.html">Talent Implementation</a></li>
+          <li><a href="planning_framework.html">Succession Planning Framework</a></li>
         </ul>
       </li>
 
