--- a/login.html
+++ b/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Register - WorkBreakdown structure</title>
+    <title>Register - Human Resources 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1 style="text-align:center; font-family: Georgia;">REGISTER FOR WORKBREAKDOWN STRUCTURE</h1>
+        <h1 style="text-align:center; font-family: Georgia;">REGISTER FOR HUMAN RESOURCES 2</h1>
         <form method="POST" style="text-align:center;" onsubmit="event.preventDefault(); return simulateRegister(this);">
             <label for="username">Username:</label><br>
             <input type="text" id="username" name="username" required><br><br>
