--- a/login1.html
+++ b/login1.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 style="text-align:center; font-family: Georgia;">WELCOME TO WORKBREAK STRUCTURE</h1>
+        <h1 style="text-align:center; font-family: Georgia;">WELCOME TO HUMAN RESOURCES 2</h1>
         <form id="loginForm" method="POST" style="text-align:center;">
             <label for="email">Email:</label><br>
             <input type="email" id="email" name="email" required autocomplete="email"><br><br>
